# synthizer-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
synthizer-rs/: Cargo.toml
synthizer-rs/examples/: buffer.rs  media_player.rs  simple.rs
synthizer-rs/src/: lib.rs
synthizer-sys/: Cargo.toml  build.rs
synthizer-sys/src/: lib.rs
