[package]

name = "synthizer-sys"
version = "0.7.1"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
description = "A library for game/VR audio applications - system bindings"
repository = "https://github.com/ndarilek/synthizer-rs"
homepage = "https://github.com/ndarilek/synthizer-rs"
license-file = "LICENSE"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]

bindgen = "0.55"